2004-06-29  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (xnarch_setimask): Inline it.

	* nucleus/module.c: Export missing symbols.

2004-06-29  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/shadow.c (xnshado_map, xnshadow_attach_skin,
	xnshadow_unmap): Fix the skin reference counting.
		
2004-06-28  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade the x86 patch to 2.6.7r6c1. Discard
	older r5 patches since critical fixes are brought by this one,
	Linux-wise and Adeos-wise.

	* arch/i386/hal/hal.c (rthal_trap_fault): Handle RTAI-originated
	faults in kernel space caused by on-demand virtual memory
	mappings.

	* nucleus/shadow.c: Import SMP-related changes.

	* skins/rtai/pipe.c (rt_pipe_open): Set magic number.

2004-06-28  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/psos+, skins/rtai, skins/uitron, skins/vrtx: adaptation to SMP.

	* */asm*/system.h: same cleanup.

	* include/nucleus/asm-i386/system.h: SMP code cleanup.

2004-06-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h: Better split the SMP/UP code
	so that the #ifdef hell is reduced.

2004-06-26  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c: Remove the automatically extendable heap
	feature: this proved to be useless and confusing. Provide
	xnheap_extend() to manually extend any given heap instead.
	Fix documentation and skins accordingly.

2004-06-25  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_schedule_runnable): Fix XNSCHED handling,
	so that we still leave this bit on if no thread switch is
	performed.
	(xnpod_schedule): Optimize and iron SMP case.

2004-06-24  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/i386/Kconfig, arch/i386/defconfig, configure.in: correctly
	handle the configure-time number of cpus.

2004-06-23  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Do not pass SUBDIRS to the kernel builder anymore;
	only rely on M=.
